Added DOM exercise with solution

--- a/JavaScript - The DOM/01_Exercise1.html
+++ b/JavaScript - The DOM/01_Exercise1.html
@@ -73,7 +73,7 @@
 
     <!-- EX4: Creating and Inserting Elements -->
     <h2>Creating and Inserting Elements</h2>
-    <button>Add a New Item to the Shopping List</button>
+    <button id="addItem">Add a New Item to the Shopping List</button>
     <ul id="shoppingList">
         <li>Bread</li>
         <li>Milk</li>
@@ -85,9 +85,8 @@
         <li>Task 2</li>
         <li>Task 3</li>
     </ul>
-    <button id="removeLastTask">Remove Last Task</button>
+    <button id="removeLastTask" onclick="removedChild()">Remove Last Task</button>
 
-    <script src="script.js"></script>
+    <script src="01_Exercise1Solved.js"></script>
 </body>
-
 </html>
